--- a/Core.DALC/QOfreces.WPF/MantenedorProducto.xaml
+++ b/Core.DALC/QOfreces.WPF/MantenedorProducto.xaml
@@ -13,37 +13,46 @@
         BorderThickness="1"
         Title="Mantenedor Producto" Height="400" Width="600" Background="Gainsboro">
     <Grid x:Name="col_1">
-        <Button x:Name="btnListarProd" Visibility="Hidden" Content="Listar Productos" HorizontalAlignment="Left" Margin="477,80,0,0" VerticalAlignment="Top" Width="103" Height="22" Click="btnListarProd_Click" BorderBrush="Black"/>
-        <Label x:Name="lblPrueba" Content="" HorizontalAlignment="Left" Margin="220,186,0,0" VerticalAlignment="Top" Height="26" Width="10"/>
-        <DataGrid x:Name="dgProd" Visibility="Hidden" CanUserAddRows="False" HorizontalAlignment="Left" Margin="358,107,0,0" VerticalAlignment="Top" Height="161" Width="222" SelectionChanged="dgProd_SelectionChanged">
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition Height="366*"/>
+        </Grid.RowDefinitions>
+        <Button x:Name="btnListarProd" Visibility="Hidden" Content="Listar Productos" HorizontalAlignment="Left" Margin="477,79,0,0" VerticalAlignment="Top" Width="103" Height="22" Click="btnListarProd_Click" BorderBrush="Black" Grid.Row="1"/>
+        <Label x:Name="lblPrueba" Content="" HorizontalAlignment="Left" Margin="220,185,0,0" VerticalAlignment="Top" Height="26" Width="10" Grid.Row="1"/>
+        <DataGrid x:Name="dgProd" Visibility="Hidden" CanUserAddRows="False" HorizontalAlignment="Left" Margin="358,106,0,0" VerticalAlignment="Top" Height="161" Width="222" SelectionChanged="dgProd_SelectionChanged" Grid.Row="1">
             <DataGrid.Columns>
                 <DataGridTextColumn x:Name="dgcId" Header="ID" Binding="{Binding Path=IdProducto}"/>
                 <DataGridTextColumn x:Name="dgcNom" Header="Nombre Producto" Binding="{Binding Path=Nombre}"/>
             </DataGrid.Columns>
         </DataGrid>
-        <TextBox x:Name="txtNombre" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Ingrese nombre del producto" HorizontalAlignment="Left" Height="23" Margin="107,79,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="199" BorderBrush="Black" TabIndex="1"/>
-        <Label x:Name="label" Content="Nombre Producto:" HorizontalAlignment="Left" Margin="-6,79,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="lblPrueba_Copy" Content="" HorizontalAlignment="Left" Margin="220,214,0,0" VerticalAlignment="Top" Height="26" Width="10"/>
-        <TextBox x:Name="txtPrecio" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Ingrese precio" HorizontalAlignment="Left" Height="23" Margin="107,109,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="199" BorderBrush="Black" TabIndex="2"/>
-        <Label x:Name="label_Copy" Content="Precio:" HorizontalAlignment="Left" Margin="57,110,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="lblPrueba_Copy1" Content="" HorizontalAlignment="Left" Margin="252,242,0,0" VerticalAlignment="Top" Height="26" Width="16"/>
-        <TextBox x:Name="txtDescripcion" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Ingrese descripcion" HorizontalAlignment="Left" Height="23" Margin="107,141,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="199" BorderBrush="Black" TabIndex="3"/>
-        <Label x:Name="label_Copy1" Content="Descripcion:" HorizontalAlignment="Left" Margin="28,141,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="lblPrueba_Copy2" Content="" HorizontalAlignment="Left" Margin="252,270,0,0" VerticalAlignment="Top" Height="26" Width="16"/>
-        <Label x:Name="lblPrueba_Copy3" Content="" HorizontalAlignment="Left" Margin="268,247,0,0" VerticalAlignment="Top" Height="26" Width="16"/>
-        <Label x:Name="lblPrueba_Copy4" Content="" HorizontalAlignment="Left" Margin="527,146,0,0" VerticalAlignment="Top" Height="26" Width="10"/>
-        <Label x:Name="lblPrueba_Copy5" Content="" HorizontalAlignment="Left" Margin="527,174,0,0" VerticalAlignment="Top" Height="26" Width="10"/>
-        <Label x:Name="label_Copy5" Content="Rubro:" HorizontalAlignment="Left" Margin="57,203,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="lblPrueba_Copy6" Content="" HorizontalAlignment="Left" Margin="527,182,0,0" VerticalAlignment="Top" Height="26" Width="10"/>
-        <Label x:Name="lblPrueba_Copy7" Content="" HorizontalAlignment="Left" Margin="527,210,0,0" VerticalAlignment="Top" Height="26" Width="10"/>
-        <ComboBox x:Name="cbRubro" HorizontalAlignment="Left" Margin="107,203,0,0" VerticalAlignment="Top" Width="120" BorderBrush="Black" TabIndex="4"/>
-        <TextBox x:Name="txtBuscar" Visibility="Hidden" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Busqueda" HorizontalAlignment="Left" Height="23" Margin="358,79,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="105" BorderBrush="Black"/>
-        <Button x:Name="btnEjecutar" Content="Agregar" HorizontalAlignment="Left" Margin="410,330,0,0" VerticalAlignment="Top" Width="75" Click="btnEjecutar_Click" BorderBrush="Black" TabIndex="6"/>
-        <Button x:Name="btnSalir" Content="Salir" HorizontalAlignment="Left" Margin="505,330,0,0" VerticalAlignment="Top" Width="75" Click="btnSalir_Click" BorderBrush="Black" Foreground="Black"/>
-        <TextBox x:Name="txtCod" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Ingrese descripcion" HorizontalAlignment="Left" Height="23" Margin="107,172,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="199" BorderBrush="Black" TabIndex="3" RenderTransformOrigin="0.44,1.96"/>
-        <Label x:Name="label_Copy2" Content="Codigo interno:" HorizontalAlignment="Left" Margin="10,172,0,0" VerticalAlignment="Top"/>
-        <Controls:Tile x:Name="tiAgregar" Height="Auto" Margin="60,10,470,325" Width="Auto" Title="Agregar" TitleFontSize="10" Click="tiAgregar_Click" />
-        <Controls:Tile x:Name="tiEliminar" Height="Auto" Margin="468,10,60,325" Width="Auto" Title="Eliminar" TitleFontSize="10" RenderTransformOrigin="0.264,0.562" Click="tiEliminar_Click"/>
-        <Controls:Tile x:Name="tiModificar" Height="Auto" Margin="265,10,265,325" Width="Auto" Title="Modificar" TitleFontSize="10" RenderTransformOrigin="1,0.438" Click="tiModificar_Click"/>
+        <TextBox x:Name="txtNombre" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Ingrese nombre del producto" HorizontalAlignment="Left" Height="23" Margin="107,78,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="199" BorderBrush="Black" TabIndex="1" Grid.Row="1" PreviewTextInput="txtNombre_PreviewTextInput" MaxLength="20" MinLines="4"/>
+        <Label x:Name="label" Content="Nombre Producto:" HorizontalAlignment="Left" Margin="-6,78,0,0" VerticalAlignment="Top" Grid.Row="1"/>
+        <Label x:Name="lblPrueba_Copy" Content="" HorizontalAlignment="Left" Margin="220,213,0,0" VerticalAlignment="Top" Height="26" Width="10" Grid.Row="1"/>
+        <TextBox x:Name="txtPrecio" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Ingrese precio" HorizontalAlignment="Left" Height="23" Margin="107,108,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="199" BorderBrush="Black" TabIndex="2" Grid.Row="1" PreviewTextInput="txtPrecio_PreviewTextInput"/>
+        <Label x:Name="label_Copy" Content="Precio:" HorizontalAlignment="Left" Margin="57,109,0,0" VerticalAlignment="Top" Grid.Row="1"/>
+        <Label x:Name="lblPrueba_Copy1" Content="" HorizontalAlignment="Left" Margin="252,241,0,0" VerticalAlignment="Top" Height="26" Width="16" Grid.Row="1"/>
+        <TextBox x:Name="txtDescripcion" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Ingrese descripcion" HorizontalAlignment="Left" Height="23" Margin="107,140,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="199" BorderBrush="Black" TabIndex="3" Grid.Row="1"/>
+        <Label x:Name="label_Copy1" Content="Descripcion:" HorizontalAlignment="Left" Margin="28,140,0,0" VerticalAlignment="Top" Grid.Row="1"/>
+        <Label x:Name="lblPrueba_Copy2" Content="" HorizontalAlignment="Left" Margin="252,269,0,0" VerticalAlignment="Top" Height="26" Width="16" Grid.Row="1"/>
+        <Label x:Name="lblPrueba_Copy3" Content="" HorizontalAlignment="Left" Margin="268,246,0,0" VerticalAlignment="Top" Height="26" Width="16" Grid.Row="1"/>
+        <Label x:Name="lblPrueba_Copy4" Content="" HorizontalAlignment="Left" Margin="527,145,0,0" VerticalAlignment="Top" Height="26" Width="10" Grid.Row="1"/>
+        <Label x:Name="lblPrueba_Copy5" Content="" HorizontalAlignment="Left" Margin="527,173,0,0" VerticalAlignment="Top" Height="26" Width="10" Grid.Row="1"/>
+        <Label x:Name="label_Copy5" Content="Rubro:" HorizontalAlignment="Left" Margin="57,202,0,0" VerticalAlignment="Top" Grid.Row="1"/>
+        <Label x:Name="lblPrueba_Copy6" Content="" HorizontalAlignment="Left" Margin="527,181,0,0" VerticalAlignment="Top" Height="26" Width="10" Grid.Row="1"/>
+        <Label x:Name="lblPrueba_Copy7" Content="" HorizontalAlignment="Left" Margin="527,209,0,0" VerticalAlignment="Top" Height="26" Width="10" Grid.Row="1"/>
+        <ComboBox x:Name="cbRubro" HorizontalAlignment="Left" Margin="107,202,0,0" VerticalAlignment="Top" Width="120" BorderBrush="Black" TabIndex="4" Grid.Row="1"/>
+        <TextBox x:Name="txtBuscar" Visibility="Hidden" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Busqueda" HorizontalAlignment="Left" Height="23" Margin="358,78,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="105" BorderBrush="Black" Grid.Row="1"/>
+        <Button x:Name="btnEjecutar" Content="Agregar" HorizontalAlignment="Left" Margin="410,329,0,0" VerticalAlignment="Top" Width="75" Click="btnEjecutar_Click" BorderBrush="Black" TabIndex="6" Grid.Row="1"/>
+        <Button x:Name="btnSalir" Content="Salir" HorizontalAlignment="Left" Margin="505,329,0,0" VerticalAlignment="Top" Width="75" Click="btnSalir_Click" BorderBrush="Black" Foreground="Black" Grid.Row="1"/>
+        <TextBox x:Name="txtCod" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Ingrese descripcion" HorizontalAlignment="Left" Height="23" Margin="107,171,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="199" BorderBrush="Black" TabIndex="3" RenderTransformOrigin="0.44,1.96" Grid.Row="1"/>
+        <Label x:Name="label_Copy2" Content="Codigo interno:" HorizontalAlignment="Left" Margin="10,171,0,0" VerticalAlignment="Top" Grid.Row="1"/>
+        <Controls:Tile x:Name="tiAgregar" Height="Auto" Margin="60,9,470,325" Width="Auto" Title="Agregar" TitleFontSize="10" Click="tiAgregar_Click" Grid.Row="1" />
+        <Controls:Tile x:Name="tiEliminar" Height="Auto" Margin="468,9,60,325" Width="Auto" Title="Eliminar" TitleFontSize="10" RenderTransformOrigin="0.264,0.562" Click="tiEliminar_Click" Grid.Row="1"/>
+        <Controls:Tile x:Name="tiModificar" Height="Auto" Margin="265,9,265,325" Width="Auto" Title="Modificar" TitleFontSize="10" RenderTransformOrigin="1,0.438" Click="tiModificar_Click" Grid.Row="1"/>
+        <Label x:Name="lblNombre" Content="Label" HorizontalAlignment="Left" Margin="320,80,0,0" VerticalAlignment="Top" Width="270"  Foreground="#FFF10707" Grid.Row="1"/>
+        <Label x:Name="lblPrecio" Content="Label" HorizontalAlignment="Left" Margin="320,109,0,0" VerticalAlignment="Top" Width="270"  Foreground="#FFF10707" Grid.Row="1"/>
+        <Label x:Name="lblDescripcion" Content="Label" HorizontalAlignment="Left" Margin="320,142,0,0" VerticalAlignment="Top" Width="270"  Foreground="#FFF10707" Grid.Row="1"/>
+        <Label x:Name="lblRubro" Content="Label" HorizontalAlignment="Left" Margin="235,202,0,0" VerticalAlignment="Top" Width="270"  Foreground="#FFF10707" Grid.Row="1"/>
+        <Label x:Name="lblCodigo" Content="Label" HorizontalAlignment="Left" Margin="320,171,0,0" VerticalAlignment="Top" Width="270"  Foreground="#FFF10707" Grid.Row="1"/>
     </Grid>
 </Controls:MetroWindow>
