--- a/Core.DALC/QOfreces.WPF/GenOferta.xaml
+++ b/Core.DALC/QOfreces.WPF/GenOferta.xaml
@@ -11,13 +11,13 @@
         Icon="img/logo.png"
         BorderBrush="{DynamicResource AccentColorBrush}"
         BorderThickness="1"
-        Title="Generar Oferta" Height="692.548" Width="897.078" Background="Gainsboro">
+        Title="Generar Oferta" Height="734.548" Width="897.078" Background="Gainsboro">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="470*"/>
             <ColumnDefinition Width="417*"/>
         </Grid.ColumnDefinitions>
-        <Button x:Name="btnGenOferta" Content="Generar Oferta" HorizontalAlignment="Left" Margin="30,586,0,0" VerticalAlignment="Top" Width="128" Click="btnGenOferta_Click" BorderBrush="Black" Height="27" Grid.Column="1"/>
+        <Button x:Name="btnGenOferta" Content="Generar Oferta" HorizontalAlignment="Left" Margin="30,622,0,0" VerticalAlignment="Top" Width="128" Click="btnGenOferta_Click" BorderBrush="Black" Height="27" Grid.Column="1"/>
         <DataGrid x:Name="dgProd" CanUserAddRows="False" HorizontalAlignment="Left" Margin="29,20,0,0" VerticalAlignment="Top" Height="221" Width="574"  AutoGenerateColumns="false" Grid.ColumnSpan="2">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Id Producto" Binding="{Binding IdProducto}" IsReadOnly="True" />
@@ -30,29 +30,39 @@
         </DataGrid>
         <Button x:Name="btnListar" Content="Listar Productos" HorizontalAlignment="Left" Margin="138,51,0,0" VerticalAlignment="Top" Width="128" Click="btnListar_Click" Grid.Column="1" BorderBrush="Black" Height="27"/>
         <Label Content="Nombre Oferta" HorizontalAlignment="Left" Margin="29,272,0,0" VerticalAlignment="Top" Width="137" Height="26"/>
-        <Label Content="Precio Oferta" HorizontalAlignment="Left" Margin="29,303,0,0" VerticalAlignment="Top" Height="26" Width="79"/>
-        <Label Content="Fecha Oferta" HorizontalAlignment="Left" Margin="29,369,0,0" VerticalAlignment="Top" Height="26" Width="77"/>
-        <Label Content="Descripcion Oferta" HorizontalAlignment="Left" Margin="29,532,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.528,2.423" Height="26" Width="108"/>
-        <TextBox x:Name="txtNombre" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Ingresa el nombre" HorizontalAlignment="Left" Height="26" Margin="149,272,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="143" BorderBrush="Black"/>
-        <TextBox x:Name="txtPrecio" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Ingresa precio" HorizontalAlignment="Left" Height="26" Margin="149,303,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="143" BorderBrush="Black"/>
-        <TextBox x:Name="txtDescOf" Controls:TextBoxHelper.ClearTextButton="True" HorizontalAlignment="Left" Height="101" Margin="149,532,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="143" BorderBrush="Black"/>
-        <DatePicker x:Name="dpFecha" HorizontalAlignment="Left" Margin="149,369,0,0" VerticalAlignment="Top" BorderBrush="Black" Height="26" Width="143"/>
+        <Label Content="Precio Oferta" HorizontalAlignment="Left" Margin="29,324,0,0" VerticalAlignment="Top" Height="26" Width="79"/>
+        <Label Content="Fecha Oferta" HorizontalAlignment="Left" Margin="29,423,0,0" VerticalAlignment="Top" Height="26" Width="77"/>
+        <Label Content="Descripcion Oferta" HorizontalAlignment="Left" Margin="29,568,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.528,2.423" Height="26" Width="108"/>
+        <TextBox x:Name="txtNombre" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Ingresa el nombre" HorizontalAlignment="Left" Height="26" Margin="149,272,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="143" BorderBrush="Black" PreviewTextInput="txtNombre_PreviewTextInput_1"/>
+        <TextBox x:Name="txtPrecio" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Ingresa precio" HorizontalAlignment="Left" Height="26" Margin="149,324,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="143" BorderBrush="Black" PreviewTextInput="txtPrecio_PreviewTextInput_1"/>
+        <TextBox x:Name="txtDescOf" Controls:TextBoxHelper.ClearTextButton="True" HorizontalAlignment="Left" Height="101" Margin="149,568,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="143" BorderBrush="Black"/>
+        <DatePicker x:Name="dpFecha" HorizontalAlignment="Left" Margin="149,423,0,0" VerticalAlignment="Top" BorderBrush="Black" Height="26" Width="143"/>
         <Label Content="Minimo Productos" HorizontalAlignment="Left" Margin="351,272,0,0" VerticalAlignment="Top" Width="113" Height="26"/>
-        <TextBox x:Name="txtMinProd" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Cantidad minima" HorizontalAlignment="Left" Height="26" Margin="30,271,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="141" BorderBrush="Black" Grid.Column="1"/>
+        <TextBox x:Name="txtMinProd" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Cantidad minima" HorizontalAlignment="Left" Height="26" Margin="30,271,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="141" BorderBrush="Black" Grid.Column="1" TextChanged="txtMinProd_TextChanged" PreviewTextInput="txtMinProd_PreviewTextInput"/>
         <Label Content="Máximo Productos" HorizontalAlignment="Left" Margin="351,324,0,0" VerticalAlignment="Top" Width="113" Height="26"/>
-        <TextBox x:Name="txtMaxProd" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Cantidad maxima" HorizontalAlignment="Left" Height="26" Margin="30,325,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="141" BorderBrush="Black" Grid.Column="1"/>
-        <Button x:Name="btnAdjuntar" Content="Adjuntar&#xD;&#xA;Imagen" HorizontalAlignment="Left" Margin="24,437,0,0" VerticalAlignment="Top" Width="104" Click="btnAdjuntar_Click" BorderBrush="Black" Height="41"/>
-        <Image x:Name="imgFoto" HorizontalAlignment="Left" Height="100" Margin="149,407,0,0" VerticalAlignment="Top" Width="143"/>
+        <TextBox x:Name="txtMaxProd" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Cantidad maxima" HorizontalAlignment="Left" Height="26" Margin="30,325,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="141" BorderBrush="Black" Grid.Column="1" PreviewTextInput="txtMaxProd_PreviewTextInput"/>
+        <Button x:Name="btnAdjuntar" Content="Adjuntar&#xD;&#xA;Imagen" HorizontalAlignment="Left" Margin="24,489,0,0" VerticalAlignment="Top" Width="104" Click="btnAdjuntar_Click" BorderBrush="Black" Height="41"/>
+        <Image x:Name="imgFoto" HorizontalAlignment="Left" Height="80" Margin="149,472,0,0" VerticalAlignment="Top" Width="128"/>
         <TextBox x:Name="txtBuscarProducto" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Buscar producto" Grid.Column="1" HorizontalAlignment="Left" Height="26" Margin="138,20,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="128" BorderBrush="Black"/>
-        <Label Content="Precio Anterior" HorizontalAlignment="Left" Margin="29,338,0,0" VerticalAlignment="Top" Width="99" Height="26"/>
-        <TextBox x:Name="txtPrecioAntes" HorizontalAlignment="Left" Height="26" Margin="149,338,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="143"/>
+        <Label Content="Precio Anterior" HorizontalAlignment="Left" Margin="29,373,0,0" VerticalAlignment="Top" Width="99" Height="26"/>
+        <TextBox x:Name="txtPrecioAntes" HorizontalAlignment="Left" Height="26" Margin="149,373,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="143" PreviewTextInput="txtPrecioAntes_PreviewTextInput_1"/>
         <CheckBox x:Name="chPubOf" Content="Publicar Oferta" HorizontalAlignment="Left" Margin="227,381,0,0" VerticalAlignment="Top" Width="122" Grid.Column="1" Height="18"/>
         <ComboBox x:Name="cbSucursal" HorizontalAlignment="Left" Margin="30,386,0,0" VerticalAlignment="Top" Width="141" Grid.Column="1" Height="22"/>
         <Label Content="Sucursal" HorizontalAlignment="Left" Margin="351,386,0,0" VerticalAlignment="Top" Width="113" Height="26"/>
         <Label Content="Categoria Oferta" HorizontalAlignment="Left" Margin="351,452,0,0" VerticalAlignment="Top" Width="113" Height="26"/>
         <ComboBox x:Name="cbCatOf" HorizontalAlignment="Left" Margin="30,452,0,0" VerticalAlignment="Top" Width="141" Grid.Column="1" Height="22"/>
-        <Button x:Name="btnVolver" Content="Volver" Grid.Column="1" HorizontalAlignment="Left" Margin="176,586,0,0" VerticalAlignment="Top" Width="75" Click="btnVolver_Click"/>
-        <Button x:Name="btnSalir" Content="SALIR" Grid.Column="1" HorizontalAlignment="Left" Margin="274,586,0,0" VerticalAlignment="Top" Width="75" Click="btnSalir_Click"/>
+        <Button x:Name="btnVolver" Content="Volver" Grid.Column="1" HorizontalAlignment="Left" Margin="176,622,0,0" VerticalAlignment="Top" Width="75" Click="btnVolver_Click"/>
+        <Button x:Name="btnSalir" Content="SALIR" Grid.Column="1" HorizontalAlignment="Left" Margin="274,622,0,0" VerticalAlignment="Top" Width="75" Click="btnSalir_Click"/>
         <Button Content="EXPORTAR PDF" Grid.Column="1" HorizontalAlignment="Left" Margin="138,83,0,0" VerticalAlignment="Top" Width="128" Click="Button_Click"/>
+        <Label x:Name="lblNombre" Content="Label" HorizontalAlignment="Left" Margin="149,293,0,0" VerticalAlignment="Top" Width="270"  Foreground="#FFF10707"/>
+        <Label x:Name="lblPrecioNew" Content="Label" HorizontalAlignment="Left" Margin="149,347,0,0" VerticalAlignment="Top" Width="270"  Foreground="#FFF10707"/>
+        <Label x:Name="lblPrecioAntiguo" Content="Label" HorizontalAlignment="Left" Margin="149,392,0,0" VerticalAlignment="Top" Width="270"  Foreground="#FFF10707"/>
+        <Label x:Name="lblFecha" Content="Label" HorizontalAlignment="Left" Margin="149,446,0,0" VerticalAlignment="Top" Width="270"  Foreground="#FFF10707"/>
+        <Label x:Name="lblImagen" Content="Label" HorizontalAlignment="Left" Margin="149,534,0,0" VerticalAlignment="Top" Width="270"  Foreground="#FFF10707"/>
+        <Label x:Name="lblMinProductos" Content="Label" HorizontalAlignment="Left" Margin="30,293,0,0" VerticalAlignment="Top" Width="270"  Foreground="#FFF10707" Grid.Column="1"/>
+        <Label x:Name="lblMaxProductos" Content="Label" HorizontalAlignment="Left" Margin="30,347,0,0" VerticalAlignment="Top" Width="270"  Foreground="#FFF10707" Grid.Column="1"/>
+        <Label x:Name="lblSucursal" Content="Label" HorizontalAlignment="Left" Margin="30,412,0,0" VerticalAlignment="Top" Width="270"  Foreground="#FFF10707" Grid.Column="1"/>
+        <Label x:Name="lblCategoria" Content="Label" HorizontalAlignment="Left" Margin="30,478,0,0" VerticalAlignment="Top" Width="270"  Foreground="#FFF10707" Grid.Column="1"/>
+        <Label x:Name="lblDescripcion" Content="Label" HorizontalAlignment="Left" Margin="149,669,0,0" VerticalAlignment="Top" Width="270"  Foreground="#FFF10707"/>
     </Grid>
 </Controls:MetroWindow>
