--- a/Core.DALC/QOfreces.WPF/GenOferta.xaml
+++ b/Core.DALC/QOfreces.WPF/GenOferta.xaml
@@ -54,7 +54,7 @@
         <ComboBox x:Name="cbCatOf" HorizontalAlignment="Left" Margin="30,374,0,0" VerticalAlignment="Top" Width="141" Grid.Column="1" Height="22"/>
         <Button x:Name="btnVolver" Content="Volver" Grid.Column="1" HorizontalAlignment="Left" Margin="178,606,0,0" VerticalAlignment="Top" Width="74" Click="btnVolver_Click"/>
         <Button x:Name="btnSalir" Content="SALIR" Grid.Column="1" HorizontalAlignment="Left" Margin="293,606,0,0" VerticalAlignment="Top" Width="75" Click="btnSalir_Click"/>
-        <Button Content="EXPORTAR PDF" Grid.Column="1" HorizontalAlignment="Left" Margin="227,170,0,0" VerticalAlignment="Top" Width="128" Click="Button_Click"/>
+        <Button Content="EXPORTAR PDF" Grid.Column="1" HorizontalAlignment="Left" Margin="227,170,0,0" VerticalAlignment="Top" Width="128"/>
         <Label x:Name="lblUserAct" Grid.Column="1" HorizontalAlignment="Left" Margin="227,10,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.566,-0.846" Width="165" Height="29"/>
         <DataGrid x:Name="dgSuc" HorizontalAlignment="Left" Margin="30,419,0,0" VerticalAlignment="Top" RenderTransformOrigin="1.136,-0.68" Width="166" Grid.Column="1" Height="159" AutoGenerateColumns="False" CanUserAddRows="False" CanUserDeleteRows="False" CanUserResizeRows="False" CanUserResizeColumns="False">
             <DataGrid.Columns>
