--- a/Core.DALC/QOfreces.WPF/MantenedorRubro.xaml
+++ b/Core.DALC/QOfreces.WPF/MantenedorRubro.xaml
@@ -13,18 +13,20 @@
         BorderThickness="1"
         Title="MantenedorRubro" Height="300" Width="514.04" Background="Gainsboro">
     <Grid>
-        <Label x:Name="label" Content="Tipo Rubro&#xD;&#xA;" HorizontalAlignment="Left" Margin="10,35,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="label" Content="Tipo Rubro" HorizontalAlignment="Left" Margin="10,35,0,0" VerticalAlignment="Top" Width="92"/>
         <Label x:Name="label1" Content="Descripción&#xD;&#xA;" HorizontalAlignment="Left" Margin="10,66,0,0" VerticalAlignment="Top"/>
         <TextBox x:Name="txtTRubro" HorizontalAlignment="Left" Height="23" Margin="102,37,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
         <TextBox x:Name="txtDesc" HorizontalAlignment="Left" Height="23" Margin="102,68,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
         <Button x:Name="btnAgreg" Content="Agregar Rubro" HorizontalAlignment="Left" Margin="347,19,0,0" VerticalAlignment="Top" Width="93" Click="btnAgreg_Click"/>
         <Button x:Name="btnActu" Content="Actualizar Rubro" HorizontalAlignment="Left" Margin="347,50,0,0" VerticalAlignment="Top" Width="93" Click="btnActu_Click"/>
         <Button x:Name="btnElim" Content="Eliminar Rubro" HorizontalAlignment="Left" Margin="347,77,0,0" VerticalAlignment="Top" Width="93" Click="btnElim_Click"/>
-        <Label x:Name="label2" Content="Rubro a liminar" HorizontalAlignment="Left" Margin="131,165,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="label2" Content="Rubro a eliminar " HorizontalAlignment="Left" Margin="131,165,0,0" VerticalAlignment="Top"/>
         <TextBox x:Name="txtElim" HorizontalAlignment="Left" Height="23" Margin="243,168,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
         <Label x:Name="lblNombre" Content="Label" HorizontalAlignment="Left" Margin="227,37,0,0" VerticalAlignment="Top" Width="270"  Foreground="#FFF10707"/>
         <Label x:Name="lblDescripcion" Content="Label" HorizontalAlignment="Left" Margin="227,68,0,0" VerticalAlignment="Top" Width="270"  Foreground="#FFF10707"/>
         <Label x:Name="lblRubroEliminar" Content="Label" HorizontalAlignment="Left" Margin="368,168,-134,0" VerticalAlignment="Top" Width="270"  Foreground="#FFF10707"/>
+        <Label x:Name="lblNombre_Copy" Content="*" HorizontalAlignment="Left" Margin="83,37,0,0" VerticalAlignment="Top" Width="19"  Foreground="#FFF10707"/>
+        <Label x:Name="lblNombre_Copy1" Content="*" HorizontalAlignment="Left" Margin="232,168,0,0" VerticalAlignment="Top" Width="19"  Foreground="#FFF10707" RenderTransformOrigin="7.947,5.423"/>
 
     </Grid>
 </Controls:MetroWindow>
