--- a/Core.DALC/QOfreces.WPF/MantenedorRetail.xaml
+++ b/Core.DALC/QOfreces.WPF/MantenedorRetail.xaml
@@ -42,7 +42,13 @@
         <Label x:Name="lblTelefono" Content="Label" HorizontalAlignment="Left" Margin="32,218,0,0" VerticalAlignment="Top" Width="270"  Foreground="#FFF10707"/>
         <Label x:Name="lblEmail" Content="Label" HorizontalAlignment="Left" Margin="32,261,0,0" VerticalAlignment="Top" Width="270"  Foreground="#FFF10707"/>
         <Label x:Name="lblDireccion" Content="Label" HorizontalAlignment="Left" Margin="32,313,0,0" VerticalAlignment="Top" Width="270"  Foreground="#FFF10707"/>
-        <Label x:Name="lblRegion" Content="Label" HorizontalAlignment="Left" Margin="346,78,-37,0" VerticalAlignment="Top" Width="270"  Foreground="#FFF10707"/>
-        <Label x:Name="lblComuna" Content="Label" HorizontalAlignment="Left" Margin="346,135,-37,0" VerticalAlignment="Top" Width="270"  Foreground="#FFF10707"/>
+        <Label x:Name="lblRegion" Content="Label" HorizontalAlignment="Left" Margin="369,78,0,0" VerticalAlignment="Top" Width="200"  Foreground="#FFF10707"/>
+        <Label x:Name="lblComuna" Content="Label" HorizontalAlignment="Left" Margin="369,135,0,0" VerticalAlignment="Top" Width="200"  Foreground="#FFF10707"/>
+        <Label x:Name="lblNombre_Copy3" Content="*" HorizontalAlignment="Left" Margin="207,53,0,0" VerticalAlignment="Top" Width="19"  Foreground="#FFF10707"/>
+        <Label x:Name="lblNombre_Copy" Content="*" HorizontalAlignment="Left" Margin="207,104,0,0" VerticalAlignment="Top" Width="19"  Foreground="#FFF10707"/>
+        <Label x:Name="lblNombre_Copy1" Content="*" HorizontalAlignment="Left" Margin="207,148,0,0" VerticalAlignment="Top" Width="19"  Foreground="#FFF10707"/>
+        <Label x:Name="lblNombre_Copy4" Content="*" HorizontalAlignment="Left" Margin="207,244,0,0" VerticalAlignment="Top" Width="19"  Foreground="#FFF10707"/>
+        <Label x:Name="lblNombre_Copy6" Content="*" HorizontalAlignment="Left" Margin="346,78,0,0" VerticalAlignment="Top" Width="19"  Foreground="#FFF10707"/>
+        <Label x:Name="lblNombre_Copy7" Content="*" HorizontalAlignment="Left" Margin="346,138,0,0" VerticalAlignment="Top" Width="19"  Foreground="#FFF10707"/>
     </Grid>
 </Controls:MetroWindow>
