--- a/Core.DALC/ReportingService/Reporte de Valoraciones .rdl
+++ b/Core.DALC/ReportingService/Reporte de Valoraciones .rdl
@@ -79,16 +79,13 @@ WHERE        SUCURSALES.ID_SUCURSAL = OFERTA.SUCURSALES_ID AND OFERTA.ID_OFERTA 
             <TablixBody>
               <TablixColumns>
                 <TablixColumn>
-                  <Width>3.77971cm</Width>
+                  <Width>3.277cm</Width>
                 </TablixColumn>
                 <TablixColumn>
-                  <Width>5.03225cm</Width>
+                  <Width>3.76225cm</Width>
                 </TablixColumn>
                 <TablixColumn>
-                  <Width>2.52263cm</Width>
-                </TablixColumn>
-                <TablixColumn>
-                  <Width>2.5cm</Width>
+                  <Width>2.0993cm</Width>
                 </TablixColumn>
               </TablixColumns>
               <TablixRows>
@@ -134,7 +131,7 @@ WHERE        SUCURSALES.ID_SUCURSAL = OFERTA.SUCURSALES_ID AND OFERTA.ID_OFERTA 
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value>TOTAL VALORACIONES</Value>
+                                  <Value>VALORACIONES</Value>
                                   <Style />
                                 </TextRun>
                               </TextRuns>
@@ -172,39 +169,6 @@ WHERE        SUCURSALES.ID_SUCURSAL = OFERTA.SUCURSALES_ID AND OFERTA.ID_OFERTA 
                             </Paragraph>
                           </Paragraphs>
                           <rd:DefaultName>Textbox47</rd:DefaultName>
-                          <Style>
-                            <Border>
-                              <Color>LightGrey</Color>
-                              <Style>Solid</Style>
-                            </Border>
-                            <PaddingLeft>2pt</PaddingLeft>
-                            <PaddingRight>2pt</PaddingRight>
-                            <PaddingTop>2pt</PaddingTop>
-                            <PaddingBottom>2pt</PaddingBottom>
-                          </Style>
-                        </Textbox>
-                      </CellContents>
-                    </TablixCell>
-                    <TablixCell>
-                      <CellContents>
-                        <Textbox Name="Textbox60">
-                          <CanGrow>true</CanGrow>
-                          <KeepTogether>true</KeepTogether>
-                          <Paragraphs>
-                            <Paragraph>
-                              <TextRuns>
-                                <TextRun>
-                                  <Value>FECHA VALORACION</Value>
-                                  <Style />
-                                </TextRun>
-                              </TextRuns>
-                              <Style />
-                            </Paragraph>
-                          </Paragraphs>
-                          <rd:DefaultName>Textbox60</rd:DefaultName>
-                          <Visibility>
-                            <Hidden>true</Hidden>
-                          </Visibility>
                           <Style>
                             <Border>
                               <Color>LightGrey</Color>
@@ -313,46 +277,12 @@ WHERE        SUCURSALES.ID_SUCURSAL = OFERTA.SUCURSALES_ID AND OFERTA.ID_OFERTA 
                         </Textbox>
                       </CellContents>
                     </TablixCell>
-                    <TablixCell>
-                      <CellContents>
-                        <Textbox Name="FECHA_VALORACION">
-                          <CanGrow>true</CanGrow>
-                          <KeepTogether>true</KeepTogether>
-                          <Paragraphs>
-                            <Paragraph>
-                              <TextRuns>
-                                <TextRun>
-                                  <Value>=Fields!FECHA_VALORACION.Value</Value>
-                                  <Style />
-                                </TextRun>
-                              </TextRuns>
-                              <Style />
-                            </Paragraph>
-                          </Paragraphs>
-                          <rd:DefaultName>FECHA_VALORACION</rd:DefaultName>
-                          <Visibility>
-                            <Hidden>true</Hidden>
-                          </Visibility>
-                          <Style>
-                            <Border>
-                              <Color>LightGrey</Color>
-                              <Style>Solid</Style>
-                            </Border>
-                            <PaddingLeft>2pt</PaddingLeft>
-                            <PaddingRight>2pt</PaddingRight>
-                            <PaddingTop>2pt</PaddingTop>
-                            <PaddingBottom>2pt</PaddingBottom>
-                          </Style>
-                        </Textbox>
-                      </CellContents>
-                    </TablixCell>
                   </TablixCells>
                 </TablixRow>
               </TablixRows>
             </TablixBody>
             <TablixColumnHierarchy>
               <TablixMembers>
-                <TablixMember />
                 <TablixMember />
                 <TablixMember />
                 <TablixMember />
@@ -372,7 +302,7 @@ WHERE        SUCURSALES.ID_SUCURSAL = OFERTA.SUCURSALES_ID AND OFERTA.ID_OFERTA 
             <Top>2.75167cm</Top>
             <Left>0.39688cm</Left>
             <Height>2.73967cm</Height>
-            <Width>13.83459cm</Width>
+            <Width>9.13855cm</Width>
             <Style>
               <Border>
                 <Style>None</Style>
