--- a/Core.DALC/QOfreces.WPF/Administrador.xaml
+++ b/Core.DALC/QOfreces.WPF/Administrador.xaml
@@ -11,21 +11,23 @@
         Icon="img/logo.png"
         BorderBrush="{DynamicResource AccentColorBrush}"
         BorderThickness="1"
-        Title="Administrador de sistema" Height="396.226" Width="728.84" Background="Gainsboro">
+        Title="Administrador de sistema" Height="396.226" Width="728.84" Background="Black">
     <Grid Margin="0,0,2,0">
-        <Controls:Tile x:Name="tiRubro" Margin="557.5,53,-5.5,176" TitleFontSize="12" Title="Mantenedor Rubro" Click="tiRubro_Click">
+        <Controls:Tile x:Name="tiRubro" Background="Orange" Margin="557.5,53,-5.5,176" TitleFontSize="12" Title="Mantenedor Rubro" Click="tiRubro_Click">
             <Image x:Name="image2" Height="100" Width="100" Stretch="Fill" Source="img/MantenedorRubro.png"/>
         </Controls:Tile>
-        <Controls:Tile x:Name="tiUsuario" Margin="214.5,53,337.5,176" Title="Mantenedor Usuario" TitleFontSize="12" Click="tiUsuario_Click">
+        <Controls:Tile x:Name="tiUsuario" Background="Orange" Margin="214.5,53,337.5,176" Title="Mantenedor Usuario" TitleFontSize="12" Click="tiUsuario_Click">
             <Image x:Name="image" Height="100" Width="100" Stretch="Fill" Source="img/MantenedorUsuario.png"/>
         </Controls:Tile>
-        <Controls:Tile x:Name="tiEmpresa" Margin="385.5,53,166.5,176" TitleFontSize="12" Title="Mantenedor Empresa" Click="tiEmpresa_Click">
+        <Controls:Tile x:Name="tiEmpresa" Background="Orange" Margin="385.5,53,166.5,176" TitleFontSize="12" Title="Mantenedor Empresa" Click="tiEmpresa_Click">
             <Image x:Name="image1" Height="100" Width="100" Stretch="Fill" Source="img/MantenedorEmpresa.png"/>
         </Controls:Tile>
-        <Controls:Tile x:Name="tiProducto" Margin="32.5,53,519.5,176" TitleFontSize="12" Title="Mantenedor Producto" Click="tiProducto_Click">
+        <Controls:Tile x:Name="tiProducto" Background="Orange" Margin="32.5,53,519.5,176" TitleFontSize="12" Title="Mantenedor Producto" Click="tiProducto_Click">
             <Image x:Name="image3" Height="100" Width="100" Stretch="Fill" Source="img/MantenedorProducto.png"/>
         </Controls:Tile>
-        <Button x:Name="btnSalir" Content="Salir" HorizontalAlignment="Left" Margin="636,243,0,0" VerticalAlignment="Top" Width="75" Click="btnSalir_Click"/>
+        <Controls:Tile x:Name="tiSalir" Background="Orange" Margin="667,227,10,89" TitleFontSize="12"  Height="Auto" Width="Auto" Click="tiSalir_Click">
+            <Image x:Name="image4" Height="40" Width="47" Stretch="Fill" Source="img/Logout.png"/>
+        </Controls:Tile>
 
     </Grid>
 </Controls:MetroWindow>
