--- a/Core.DALC/QOfreces.WPF/mainwindow.xaml
+++ b/Core.DALC/QOfreces.WPF/mainwindow.xaml
@@ -11,12 +11,12 @@
         Icon="img/logo.png"
         BorderBrush="{DynamicResource AccentColorBrush}"
         BorderThickness="1"
-        Title="Login" Height="332" Width="300" Background="black" WindowStartupLocation="CenterScreen" AllowsTransparency="True" Opacity="0.495">
+        Title="Login" Height="332" Width="300"  WindowStartupLocation="CenterScreen">
     <Grid>
       
         <Button x:Name="button" Content="Ingresar" HorizontalAlignment="Left" Margin="91,242,0,0" VerticalAlignment="Top" Width="75" Click="button_Click" BorderBrush="Black" TabIndex="3"/>
         <Label x:Name="label" Content="" HorizontalAlignment="Left" Margin="101,156,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="txtUser" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Ingresa tu usuario" HorizontalAlignment="Left" Height="23" Margin="10,156,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="272" BorderBrush="Black" TabIndex="1"/>
+        <TextBox x:Name="txtUser" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Ingresa tu usuario" HorizontalAlignment="Left" Height="23" Margin="10,156,0,0"  VerticalAlignment="Top" Width="272" BorderBrush="Black" TabIndex="1"/>
         <PasswordBox x:Name="pbPassword" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Ingresa tu contraseña" HorizontalAlignment="Left" Margin="10,200,0,0" VerticalAlignment="Top" Width="272" BorderBrush="Black" TabIndex="2"/>
         <Image x:Name="image" HorizontalAlignment="Left" Height="114" Margin="80,25,0,0" VerticalAlignment="Top" Width="111" Source="img/Login.png" Stretch="Fill"/>
         <Label x:Name="lblNombre" Content="Label" HorizontalAlignment="Left" Margin="10,130,0,0" VerticalAlignment="Top" Width="270"  Foreground="#FFF10707"/>
